[package]
name = "proxy-gen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.0", features = ["derive"] }
md5 = "0.7.0"
reqwest = { version = "0.11.24", features = ["rustls-tls", "json"] }
serde_json = "1.0.113"
tokio = { version = "1.36.0", features = ["full"] }
